--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,53 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+h1 {
+	color: rgb(2, 132, 130);
+}
+h2 {
+	color: #ffd700;
+}
+h1, h2, p {
+	text-align: center;
+}
+nav {
+	background-color: #808080;
+}
+
+a {
+	background-color: #ffbf00;
+	color: #ffffff;
+	padding: 35px;
+	float: left;
+	display: block;
+}
+a:hover {
+	background-color: #ee5f3c;
+}
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	content: " ";
+	clear: both;
+	height: 0;
+	font-size: 0;
+}
+.board {
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+}
+.card {
+	height: 200px;
+	width: 150px;
+	background-color: rgb(255,255,0);
+	border: 1px solid rgb(0,0,0);
+	border-radius: 10px;
+	float: left;
+	margin: 8%;
+
+}
+.name {
+	color: #ff0000;
+}
+footer {
+	text-align: center;
+	background-color: #808080;
+}
